<resources>
    <string name="app_name">WEREWOLF</string>
    <string name="player_num">Number of Players</string>
    <string name="enter_player_num">Enter a number of players</string>
    <string name="showRole">Reveal the role upon death in the game.</string>
    <string name="noshowRole">Hide the role upon death in the game.</string>
    <string name="startBotton">LET\'S PLAY!</string>
    <string name="role_villager">Villager</string>
    <string name="role_werewolf">Werewolf</string>
    <string name="role_seer">Seer</string>
    <string name="role">Your role is:</string>
    <string name="players_name">Player name:</string>
    <string name="input_name">All good!</string>
    <string name="next_btn">next</string>
    <string name="kill">A player was killed by werewolfs</string>
    <string name="hang">A player was hanged</string>
    <string name="safe">Nobody dies</string>
    <string name="default_img">default img</string>
    <string name="werewolf_img">werewolf img</string>
    <string name="seer_img">seer img</string>
    <string name="villager_img">villager img</string>
    <string name="skip"><u>skip</u></string>
    <string name="end_btn">Got it</string>
    <string name="winner">The winner is</string>
    <string name="seerIs">The Seer name were</string>
    <string name="wolfIs">The werewolf name were</string>
    <string name="exit">Confirm exit</string>
    <string name="confirm_exit">Are you sure you want to exit this screen?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
</resources>