<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="?android:windowBackground"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/appName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/super_large_size"
            android:textStyle="bold"
            android:textColor="?android:textColorSecondary"
            android:text="@string/app_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="200dp">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/large_size"
            android:textColor="?android:textColorPrimary"
            android:text="@string/player_num" />

        <EditText
            android:id="@+id/playerCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:gravity="center"
            android:textSize="@dimen/normal_size"
            android:textColor="?android:textColorHint"
            android:hint="@string/enter_player_num"
            />
    </LinearLayout>

    <CheckBox
        android:id="@+id/revealCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/normal_size"
        android:layout_gravity="center"
        android:textColor="?colorControlActivated"
        android:layout_marginBottom="50dp"
        android:text="@string/showRole" />


    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startBotton"
        android:textSize="@dimen/normal_size"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:padding="15dp"
        android:textColor="?colorOnPrimary"
        android:background="?colorPrimary" />


</LinearLayout>