<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context=".MainActivity"
    android:background="?android:windowBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/players_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/normal_size"
            android:textColor="?android:textColorPrimary"
            android:text="@string/players_name" />

        <EditText
            android:id="@+id/input_name"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            android:importantForAutofill="no"
            tools:ignore="TextContrastCheck"
            android:textSize="@dimen/normal_size"
            android:textColor="?android:textColorHint"
            android:hint="@string/input_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/playerRole"
            android:layout_width="285dp"
            android:layout_height="318dp"
            android:layout_gravity="center"
            android:src="@drawable/villager_img"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/roleis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/role"
            android:textColor="?android:textColorPrimary"
            android:textSize="@dimen/normal_size"/>

        <TextView
            android:id="@+id/role"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/role_villager"
            android:textColor="?android:textColorPrimary"
            android:textStyle="bold"
            android:textSize="@dimen/normal_size"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/next_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/next_btn"
            android:textSize="@dimen/normal_size"
            android:textColor="?colorOnPrimary"
            android:background="?colorPrimary"
            android:textStyle="bold"/>
    </LinearLayout>

</LinearLayout>