<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/kill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="125dp"
        android:layout_marginBottom="10dp"
        android:textSize="@dimen/normal_size"
        android:textColor="?android:textColorPrimary"
        android:text="@string/kill" />

    <TextView
        android:id="@+id/deathName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/normal_size"
        android:textColor="?android:textColorPrimary"
        android:text="@string/input_name" />

    <ImageView
        android:id="@+id/imageViewdead"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_width="285dp"
        android:layout_height="318dp"
        android:layout_gravity="center"
        android:src="@drawable/villager_img" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/roleDead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normal_size"
            android:textColor="?android:textColorPrimary"
            android:text="" />

        <Button
            android:id="@+id/NextButtondead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="?colorPrimary"
            android:padding="15dp"
            android:text="@string/next_btn"
            android:textColor="?colorOnPrimary"
            android:textSize="@dimen/normal_size"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>